<resources>
    <string name="app_name">Everyday Photo</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="camera_orientation">Camera Orientation</string>
    <string name="camera_facing">Camera Facing</string>
    <string name="back">Back</string>
    <string name="front">Front</string>
    <string name="select_model">Select Model</string>
    <string name="err_msg_name_already_exists">This name already exists.</string>
    <string name="model_created">New model for %1$s is created!</string>
    <string name="quit_app_permission_deny">App is terminated, because permissions are denied.</string>
    <string name="make_video">Make Video</string>
    <string name="delete">Delete</string>
    <string name="models">Models</string>
    <string name="delete_model_success_n">%1$d models have been deleted.</string>
    <string name="delete_model_success">Model %1$s is deleted.</string>
    <string name="add_model">Add Model</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total">Total</string>
    <string name="create_new">Create New</string>
    <string name="empty_models">There are no models.</string>
    <string name="description">Description</string>
    <string name="err_msg_name_empty">Please, enter a name.</string>
    <string name="please_wait">Please wait…</string>
    <string name="creating_model">Creating Model</string>
    <string name="days_args">%1$s days</string>
    <string name="days">Days</string>
    <string name="photos_args">%1$d photos</string>
    <string name="edit">Edit</string>
    <string name="menu">Menu</string>
    <string name="edit_model">Edit Model</string>
    <string name="updateing_model">Updating Model</string>
    <string name="model_updated">Model \'%1$s\' is updated.</string>
    <string name="delete_model">Delete Model</string>
    <string name="msg_delete_model_confirm">Are you sure you want to delete the selected model? All photos will be
        deleted and can not be recovered.
    </string>
    <string name="photos">Photos</string>
    <string name="empty_photos">There are no photos.</string>
    <string name="created_at_args">Created at %1$s</string>
    <string name="videos">Videos</string>
    <string name="more">more</string>
    <string name="save_and_upload"><![CDATA[Save & Upload]]></string>
    <string name="create_new_video">Create new video</string>
</resources>
