<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.models.add.AddModelFragment">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_close_white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/add_model"
                    android:textColor="@color/white"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivClose"/>

            <ImageView
                    android:id="@+id/ivDone"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_done"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ImageView
            android:id="@+id/ivAddProfile"
            android:background="@drawable/shape_icon_border_circle_primary"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="32dp"
            android:src="@drawable/ic_model_add"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/bg_et_gray_rounded_border"
            android:hint="@string/name"
            app:layout_constraintTop_toBottomOf="@id/ivAddProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/tvErrorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/err_msg_name_already_exists"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintStart_toStartOf="@id/etName"/>

    <EditText
            android:id="@+id/etDesc"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_et_gray_rounded_border"
            android:inputType="textMultiLine"
            android:hint="@string/description"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@id/tvErrorMsg"
            app:layout_constraintStart_toStartOf="@id/etName"
            app:layout_constraintEnd_toEndOf="@id/etName"/>

    <TextView
            android:id="@+id/tvLblOrientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/camera_orientation"
            app:layout_constraintTop_toBottomOf="@id/etDesc"
            app:layout_constraintStart_toStartOf="@id/etName"/>

    <Spinner
            android:id="@+id/spnOrientation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_et_gray_rounded_border"
            app:layout_constraintTop_toBottomOf="@id/tvLblOrientation"
            app:layout_constraintStart_toStartOf="@id/etName"
            app:layout_constraintEnd_toEndOf="@id/etName"/>

    <TextView
            android:id="@+id/tvLblCameraFacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/camera_facing"
            app:layout_constraintTop_toBottomOf="@id/spnOrientation"
            app:layout_constraintStart_toStartOf="@id/etName"/>

    <Spinner
            android:id="@+id/spnCameraFacing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_et_gray_rounded_border"
            app:layout_constraintTop_toBottomOf="@id/tvLblCameraFacing"
            app:layout_constraintStart_toStartOf="@id/etName"
            app:layout_constraintEnd_toEndOf="@id/etName"/>

</android.support.constraint.ConstraintLayout>